fixing picture s not showing up

--- a/src/app/landing-page/landing-page.component.css
+++ b/src/app/landing-page/landing-page.component.css
@@ -69,13 +69,13 @@
     width:100vh;
 }
 .GuestBlock {
-    background: url('https://raw.githubusercontent.com/flyaway12345/Griptape-Adventure/refs/heads/main/src/assests/LocaBlock.png') center / contain no-repeat;
+    background: url('https://raw.githubusercontent.com/flyaway12345/Griptape-Adventure/refs/heads/main/src/assests/GuestBlock.png') center / contain no-repeat;
     border-style: none;
     height: 100vh;
     width:100vh;
 }
 .LocaBlock {
-    background: url('https://raw.githubusercontent.com/flyaway12345/Griptape-Adventure/refs/heads/main/src/assests/LocaBlock.png') center / contain no-repeat;
+    background: url('https://raw.githubusercontent.com/flyaway12345/Griptape-Adventure/refs/heads/main/src/app/nyc/assets/LocaBlock.png') center / contain no-repeat;
     border-style: none;
     height: 100vh;
     width:100vh;
@@ -106,7 +106,7 @@
     height: 100vh;
     width:100vh;
 }
-.button {
+.nextButton {
     background: url('https://raw.githubusercontent.com/flyaway12345/Griptape-Adventure/refs/heads/main/src/assests/button.png') center / contain no-repeat;
     border-style: none;
     height: 150px;
@@ -121,6 +121,6 @@
 #landingBlock{
         background: url('https://raw.githubusercontent.com/flyaway12345/Griptape-Adventure/refs/heads/main/src/assests/landingBlock.png') center / contain no-repeat;
         border-style: none;
-        height: 150px;
+        height: 75px;
         width:100%;
 }
