--- a/src/app/nyc/nyc.component.css
+++ b/src/app/nyc/nyc.component.css
@@ -69,13 +69,13 @@
     width:100vh;
 }
 .GuestBlock {
-    background: url('https://raw.githubusercontent.com/flyaway12345/Griptape-Adventure/refs/heads/main/src/assests/GuestBlock.png') center / contain no-repeat;
+    background: url('https://raw.githubusercontent.com/flyaway12345/Griptape-Adventure/refs/heads/main/src/assests/LocaBlock.png') center / contain no-repeat;
     border-style: none;
     height: 100vh;
     width:100vh;
 }
 .LocaBlock {
-    background: url('https://github.com/flyaway12345/Griptape-Adventure/blob/main/src/assests/LocaBlock.png') center / contain no-repeat;
+    background: url('https://raw.githubusercontent.com/flyaway12345/Griptape-Adventure/refs/heads/main/src/assests/LocaBlock.png') center / contain no-repeat;
     border-style: none;
     height: 100vh;
     width:100vh;
@@ -106,11 +106,11 @@
     height: 100vh;
     width:100vh;
 }
-.button {
+.nextButton {
     background: url('https://raw.githubusercontent.com/flyaway12345/Griptape-Adventure/refs/heads/main/src/assests/button.png') center / contain no-repeat;
     border-style: none;
-    height: 100vh;
-    width:100vh;
+    height: 150px;
+    width:10%;
 }
 #More {
     background: url('https://raw.githubusercontent.com/flyaway12345/Griptape-Adventure/refs/heads/main/src/assests/More.png') center / contain no-repeat;
@@ -121,6 +121,6 @@
 #landingBlock{
         background: url('https://raw.githubusercontent.com/flyaway12345/Griptape-Adventure/refs/heads/main/src/assests/landingBlock.png') center / contain no-repeat;
         border-style: none;
-        height: 150px;
+        height: 75px;
         width:100%;
 }
